# cmake_minimum_required(VERSION 3.0)
# project(luabitopmod)
if(APPLE)
    add_compile_options(-std=gnu99 -g -Wall -DLUA_COMPAT_MODULE -DLUA_NUMBER_DOUBLE -Wextra)
endif(APPLE)
if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    add_compile_options(-std=gnu99 -g -Wall -DLUA_COMPAT_MODULE -DLUA_NUMBER_DOUBLE -Wextra)
endif(CMAKE_SYSTEM_NAME MATCHES "Linux")
if(WIN32)
    add_compile_options(-Wall -DLUA_COMPAT_MODULE -DLUA_NUMBER_DOUBLE)
endif(WIN32)
include_directories(../../include)
aux_source_directory(. LUABITOPMOD_SRC)
add_library(luabitopmod MODULE ${LUABITOPMOD_SRC})#dynamic load library  .so .bundle
target_link_libraries(luabitopmod lualib)
