# cmake_minimum_required(VERSION 3.0)
# project(luacjson)
if(APPLE)
    add_compile_options(-std=gnu99 -g -Wall -DLUA_COMPAT_MODULE -Wextra)
endif(APPLE)
if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    add_compile_options(-std=gnu99 -g -Wall -DLUA_COMPAT_MODULE -Wextra)
endif(CMAKE_SYSTEM_NAME MATCHES "Linux")
if(WIN32)
    add_compile_options(-Wall -DLUA_COMPAT_MODULE)
endif(WIN32)
include_directories(../../include)
# aux_source_directory(. LUACJSONMOD_SRC)
set(LUACJSONMOD_SRC fpconv.c lua_cjson.c strbuf.c)
add_library(luacjsonmod MODULE ${LUACJSONMOD_SRC})#dynamic load library  .so .bundle
target_link_libraries(luacjsonmod lualib)
